--- a/pillar-web/src/styles/_project.sass
+++ b/pillar-web/src/styles/_project.sass
@@ -58,7 +58,7 @@ $z-index-base: 13
 	border-right: thick solid darken($color-background-nav, 2%)
 	background-color: $color-background-nav
 
-	z-index: $z-index-base + 1
+	z-index: $z-index-base + 3
 
 	left: 0
 	transition: all 250ms ease-in-out
@@ -92,7 +92,7 @@ $z-index-base: 13
 	position: absolute
 	left: $project_nav-width - 30px
 	bottom: 0
-	z-index: $z-index-base + 1
+	z-index: $z-index-base + 3
 
 	+media-lg
 		border-bottom-left-radius: 3px
